@@ -8,6 +8,7 @@ Changes in 2.8.21
 - Fixes: Dates not required & Points can be 0 in Assignments.php
 - List table cells middle align in stylesheet.css
 - Correct Students Contact query: only if Custody / Emergency checked in GetStuList.fnc.php
+- Limit School Years input to 5 past years in EditHistoryMarkingPeriods.php
 
 Changes in 2.8.20
 -----------------
